--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -17,5 +17,8 @@
   "list.empty": "No results found",
   "options.switchType": "Switch type",
   "options.frameMaterial": "Frame material",
-  "options.backlight": "Backlight"
+  "options.backlight": "Backlight",
+  "options.sensor": "Sensor",
+  "options.buttons": "Buttons",
+  "options.dpi": "DPI"
 }
