complet and reorder i18n files

--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -1,24 +1,27 @@
 {
-  "cart.order-summary": "Order Summary",
-  "cart.order-total": "Order Total",
-  "cart.checkout": "Checkout",
-  "categories.keyboards": "Keyboards",
-  "categories.headphones": "Headphones",
-  "categories.mice": "Mices",
-  "categories.our_keyboards": "Our keyboards",
-  "categories.our_headphones": "our headphones",
-  "categories.our_mice": "Our mices",
-  "cart.add-to-cart": "Add to cart",
-  "cart.your-cart": "Your cart",
-  "cart.empty": "No items added to cart",
-  "product.featured-products": "Featured products",
-  "footer.copy": "2023 HiShop, Inc. All Rights Reserved. Made with ♥️",
-  "toast.order-validate": "Your order has been validated",
-  "list.empty": "No results found",
-  "options.switchType": "Switch type",
-  "options.frameMaterial": "Frame material",
-  "options.backlight": "Backlight",
-  "options.sensor": "Sensor",
-  "options.buttons": "Buttons",
-  "options.dpi": "DPI"
+	"cart.add-to-cart": "Add to cart",
+	"cart.checkout": "Checkout",
+	"cart.empty": "No items added to cart",
+	"cart.order-summary": "Order Summary",
+	"cart.order-total": "Order Total",
+	"cart.your-cart": "Your cart",
+	"categories.headphones": "Headphones",
+	"categories.keyboards": "Keyboards",
+	"categories.mice": "Mices",
+	"categories.our_headphones": "our headphones",
+	"categories.our_keyboards": "Our keyboards",
+	"categories.our_mice": "Our mices",
+	"footer.copy": "2023 HiShop, Inc. All Rights Reserved. Made with ♥️",
+	"list.empty": "No results found",
+	"options.backlight": "Backlight",
+	"options.buttons": "Buttons",
+	"options.dpi": "DPI",
+	"options.frameMaterial": "Frame material",
+	"options.sensor": "Sensor",
+	"options.switchType": "Switch type",
+	"product.featured-products": "Featured products",
+	"toast.item-added": "The product has been added to your cart",
+	"toast.item-already-on-cart": "The product is already in your cart",
+	"toast.item-removed": "The product has been removed from your cart",
+	"toast.order-validate": "Your order has been validated"
 }
