--- a/src/lang/fr-FR.json
+++ b/src/lang/fr-FR.json
@@ -1,24 +1,27 @@
 {
-  "cart.order-summary": "Résumé de commande",
-  "cart.order-total": "Total",
-  "cart.checkout": "Payer",
-  "categories.keyboards": "Claviers",
-  "categories.headphones": "Casques",
-  "categories.mice": "Souris",
-  "categories.our-keyboards": "Nos claviers",
-  "categories.our-headphones": "Nos casques",
-  "categories.our-mice": "Nos souris",
-  "cart.add-to-cart": "Ajouter au panier",
-  "cart.your-cart": "Votre panier",
-  "cart.empty": "Aucun article dans le panier",
-  "product.featured-products": "Produits tendances",
-  "footer.copy": "2023 HiShop, Inc. Tous droits réservés. Construit avec ♥️",
-  "toast.order-validate": "Votre commande a été validée",
-  "list.empty": "Aucun resultat",
-  "options.switchType": "Type de switch",
-  "options.frameMaterial": "Materiau du cadre",
-  "options.backlight": "Rétroéclairage",
-  "options.sensor": "Capteur",
-  "options.buttons": "Boutons",
-  "options.dpi": "DPI"
+	"cart.add-to-cart": "Ajouter au panier",
+	"cart.checkout": "Payer",
+	"cart.empty": "Aucun article dans le panier",
+	"cart.order-summary": "Résumé de commande",
+	"cart.order-total": "Total",
+	"cart.your-cart": "Votre panier",
+	"categories.headphones": "Casques",
+	"categories.keyboards": "Claviers",
+	"categories.mice": "Souris",
+	"categories.our-headphones": "Nos casques",
+	"categories.our-keyboards": "Nos claviers",
+	"categories.our-mice": "Nos souris",
+	"footer.copy": "2023 HiShop, Inc. Tous droits réservés. Construit avec ♥️",
+	"list.empty": "Aucun resultat",
+	"options.backlight": "Rétroéclairage",
+	"options.buttons": "Boutons",
+	"options.dpi": "DPI",
+	"options.frameMaterial": "Materiau du cadre",
+	"options.sensor": "Capteur",
+	"options.switchType": "Type de switch",
+	"product.featured-products": "Produits tendances",
+	"toast.item-added": "Le produit a été ajouté au panier",
+	"toast.item-already-on-cart": "Le produit est déjà dans le panier",
+	"toast.item-removed": "Le produit a été retiré de votre panier",
+	"toast.order-validate": "Votre commande a été validée"
 }
