--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -15,9 +15,16 @@
 	"list.empty": "No results found",
 	"options.backlight": "Backlight",
 	"options.buttons": "Buttons",
+  "options.connectionType": "Connection type",
 	"options.dpi": "DPI",
+  "option.earphoneMaterial": "Earphone material",
 	"options.frameMaterial": "Frame material",
+  "options.lightning": "Lightning",
+  "options.microphone": "Microphone",
+  "options.noiseReduction": "Noise reduction",
+  "options.pads": "Pads",
 	"options.sensor": "Sensor",
+  "options.shape": "Shape",
 	"options.switchType": "Switch type",
 	"product.featured-products": "Featured products",
 	"toast.item-added": "The product has been added to your cart",
