--- a/src/lang/fr-FR.json
+++ b/src/lang/fr-FR.json
@@ -15,9 +15,16 @@
 	"list.empty": "Aucun resultat",
 	"options.backlight": "Rétroéclairage",
 	"options.buttons": "Boutons",
+  "options.connectionType": "Type de connexion",
 	"options.dpi": "DPI",
+  "option.earphoneMaterial": "Matériau des écouteurs",
 	"options.frameMaterial": "Materiau du cadre",
+  "options.lightning": "Eclairage",
+  "options.microphone": "Microphone",
+  "options.noiseReduction": "Réduction de bruit",
+  "options.pads": "Coussinets",
 	"options.sensor": "Capteur",
+  "options.shape": "Forme",
 	"options.switchType": "Type de switch",
 	"product.featured-products": "Produits tendances",
 	"toast.item-added": "Le produit a été ajouté au panier",
